Added Solution file and csproj for Application.

--- a/SimpleDesktopApp/SimpleDesktopAppUnitTests/SimpleDesktopAppUnitTests.csproj
+++ b/SimpleDesktopApp/SimpleDesktopAppUnitTests/SimpleDesktopAppUnitTests.csproj
@@ -49,11 +49,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UserControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleDesktopApp\SimpleDesktopApp.csproj">
+      <Project>{B85D59C4-3329-4CD1-8950-83E229A41203}</Project>
+      <Name>SimpleDesktopApp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
